<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/control_list_item_style"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/farm_item_margin"
        android:layout_marginEnd="5dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/font_black_color"
            android:text="@string/str_control_deviceid"
            android:textSize="@dimen/size_normal_font"
            />

        <TextView
            android:id="@+id/control_item_device_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/size_normal_font"
            android:textColor="@color/font_black_color"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="@dimen/farm_item_margin"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/farm_item_margin"
                android:layout_gravity="center"
                android:text="@string/str_control_beam"
                android:textColor="@color/font_black_color"
                android:textSize="@dimen/size_normal_font"
                />

            <com.xw.repo.BubbleSeekBar
                android:id="@+id/control_item_sb_beam"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                app:bsb_section_count="5"
                app:bsb_second_track_color="@color/seekbar_progressed"
                app:bsb_track_color="@color/seekbar_unprogressed"
                app:bsb_thumb_color="@color/seekbar_unprogressed"
                app:bsb_max="10"
                app:bsb_section_text_position="below_section_mark"
                app:bsb_show_section_mark="true"
                app:bsb_show_section_text="true"
                app:bsb_auto_adjust_section_mark="true"
                app:bsb_show_thumb_text="true"
                app:bsb_hide_bubble="true"
                app:bsb_touch_to_seek="true"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/font_black_color"
                android:textSize="@dimen/size_normal_font"
                android:text="@string/str_control_fan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/font_black_color"
                android:textSize="@dimen/size_normal_font"
                android:text="@string/str_control_water" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/font_black_color"
                android:textSize="@dimen/size_normal_font"
                android:text="@string/str_control_spray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/font_black_color"
                android:textSize="@dimen/size_normal_font"
                android:text="@string/str_control_heat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.suke.widget.SwitchButton
                android:id="@+id/control_item_sw_fan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.suke.widget.SwitchButton
                android:id="@+id/control_item_sw_water"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.suke.widget.SwitchButton
                android:id="@+id/control_item_sw_spray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.suke.widget.SwitchButton
                android:id="@+id/control_item_sw_heat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>